# gpu_dotproduct

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REUSE.toml  SECURITY.md
.github/workflows/: c-cpp.yml
src/dotprod/: dotprod.h
src/dotprod/extensions/: avx.h  avx2.h
src/dotprod/gpu/: dp.h  main.cu
src/dotprod/util/: helpers.h
src/profiling/: CMakeLists.txt  dotprod.cpp  helpers.h
src/profiling/extensions/: avx.cpp  avx2.cpp
src/profiling/gpu/: dp.cu
src/tests/: CMakeLists.txt  dotprod.cpp  dotprod.cu  helpers.h
src/tests/extensions/: avx.cpp  avx2.cpp
src/tests/gpu/: dp.cu
